# bsv-sdk-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bsv-sdk/: Cargo.toml
bsv-sdk/src/: lib.rs
crates/bsv-arc/: Cargo.toml
crates/bsv-arc/src/: client.rs  error.rs  lib.rs  tests.rs  types.rs
crates/bsv-auth/: Cargo.toml
crates/bsv-auth/src/: brc104.rs  error.rs  lib.rs  peer.rs  session_manager.rs  types.rs  utils.rs
crates/bsv-auth/src/certificates/: certificate.rs  master.rs  mod.rs  verifiable.rs
crates/bsv-auth/src/transport/: mod.rs
crates/bsv-auth/tests/: certificate_test.rs  nonce_test.rs  peer_test.rs  session_manager_test.rs  utils_test.rs
crates/bsv-junglebus/: Cargo.toml
crates/bsv-junglebus/src/: client.rs  error.rs  lib.rs  tests.rs  types.rs
crates/bsv-message/: Cargo.toml
crates/bsv-message/src/: encrypted.rs  error.rs  lib.rs  signed.rs
crates/bsv-primitives/: Cargo.toml
crates/bsv-primitives/src/: error.rs  lib.rs
crates/bsv-primitives/src/aes/: mod.rs
crates/bsv-primitives/src/base58/: mod.rs
crates/bsv-primitives/src/bip39/: mod.rs
crates/bsv-primitives/src/chainhash/: mod.rs
crates/bsv-primitives/src/ec/: mod.rs  private_key.rs  public_key.rs  shamir.rs  signature.rs  symmetric.rs
crates/bsv-primitives/src/ecdsa/: mod.rs
crates/bsv-primitives/src/hash/: mod.rs
crates/bsv-primitives/src/keyshares/: mod.rs
crates/bsv-primitives/src/schnorr/: mod.rs
crates/bsv-primitives/src/util/: mod.rs
crates/bsv-primitives/tests/: proptest_primitives.rs
crates/bsv-script/: Cargo.toml
crates/bsv-script/src/: address.rs  chunk.rs  error.rs  lib.rs  opcodes.rs  script.rs
crates/bsv-script/src/interpreter/: config.rs  error.rs  flags.rs  mod.rs  ops_arithmetic.rs  ops_crypto.rs  ops_data.rs  ops_flow.rs  ops_stack.rs  parsed_opcode.rs  scriptnum.rs  stack.rs  thread.rs
crates/bsv-script/tests/: proptest_script.rs
crates/bsv-spv/: Cargo.toml
crates/bsv-spv/src/: beef.rs  broadcaster.rs  chain_tracker.rs  error.rs  lib.rs  merkle_path.rs  merkle_tree_parent.rs
crates/bsv-spv/tests/: proptest_spv.rs
crates/bsv-tokens/: Cargo.toml
crates/bsv-tokens/src/: error.rs  lib.rs  lineage.rs  proof.rs  scheme.rs  script_type.rs  token_id.rs  types.rs
crates/bsv-tokens/src/bundle/: dstas_bundle.rs  mod.rs  planner.rs  stas_bundle.rs
crates/bsv-tokens/src/factory/: contract.rs  dstas.rs  mod.rs  stas.rs
crates/bsv-tokens/src/script/: dstas_builder.rs  mod.rs  reader.rs  stas_btg_builder.rs  stas_builder.rs  templates.rs
crates/bsv-tokens/src/template/: dstas.rs  mod.rs  stas.rs  stas_btg.rs
crates/bsv-transaction/: Cargo.toml
crates/bsv-transaction/src/: error.rs  input.rs  lib.rs  output.rs  tests.rs  transaction.rs
crates/bsv-transaction/src/broadcaster/: mod.rs
crates/bsv-transaction/src/chaintracker/: mod.rs
crates/bsv-transaction/src/fee_model/: mod.rs
crates/bsv-transaction/src/sighash/: mod.rs
crates/bsv-transaction/src/template/: mod.rs  p2pkh.rs
crates/bsv-transaction/tests/: proptest_transaction.rs
crates/bsv-wallet/: Cargo.toml
crates/bsv-wallet/src/: error.rs  key_deriver.rs  lib.rs  proto_wallet.rs  serializer.rs  types.rs  wallet_trait.rs
crates/bsv-wallet/tests/: proptest_wallet.rs
docs/: stas-architecture.md  stas-plan-comparison.md  stas-prd-claude.md  stas-prd-final.md  stas-prd.md
