[package]
name = "bsv-sdk"
description = "BSV Blockchain SDK - Complete SDK re-exporting all components"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["bitcoin", "bsv", "blockchain", "sdk"]
categories = ["cryptography"]

[dependencies]
bsv-primitives = { workspace = true }
bsv-script = { workspace = true }
bsv-transaction = { workspace = true }
bsv-wallet = { workspace = true }
bsv-message = { workspace = true }
bsv-auth = { workspace = true }
bsv-spv = { workspace = true }
bsv-tokens = { workspace = true }
bsv-arc = { workspace = true }
bsv-junglebus = { workspace = true }
