[package]
name = "bsv-primitives"
description = "BSV Blockchain SDK - Cryptographic primitives, hashing, and utilities"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k256 = { workspace = true }
sha2 = { workspace = true }
ripemd = { workspace = true }
hmac = { workspace = true }
aes-gcm = { workspace = true }
cbc = { workspace = true }
aes = { workspace = true }
pbkdf2 = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
digest = { workspace = true }
generic-array = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
