[package]
name = "bsv-spv"
description = "BSV Blockchain SDK - SPV verification, Merkle paths, BEEF format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["bitcoin", "bsv", "spv", "merkle"]
categories = ["cryptography"]

[dependencies]
bsv-primitives = { workspace = true }
bsv-transaction = { workspace = true }
bsv-script = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1"
